--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,14 @@
 * {
   scroll-behavior: smooth;
 }
+
+.banner {
+  background-image: linear-gradient(
+    to right,
+    rgba(252, 214, 255, 0.7),
+    rgba(41, 216, 255, 0.7),
+    rgba(255, 253, 128, 0.7),
+    rgba(248, 154, 191, 0.7),
+    rgba(252, 214, 255, 0.7)
+  );
+}
