--- a/app/globals.css
+++ b/app/globals.css
@@ -16,3 +16,28 @@
     rgba(252, 214, 255, 0.7)
   );
 }
+
+@layer utilities {
+  .section-container {
+    @apply max-w-5xl mx-auto px-4;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 8px;
+    border-radius: 2px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 50px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    @apply bg-gray-700;
+    border-radius: 50px;
+  }
+
+  .scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+  }
+}
